Ajout fig Water Only exple

--- a/fig/fig_OrientationCore/tex/subfig_OrientationCoreH1.tex
+++ b/fig/fig_OrientationCore/tex/subfig_OrientationCoreH1.tex
@@ -40,8 +40,8 @@
 %		$\rightarrow$ & acoustique\\
 %		& principale
 %		\end{tabular}};
-		\draw (n30.north west) node [above right, fill=white, fill opacity=.7, text opacity=1]{\textcolor{MatlabOrange}{\textbf{Ambiant}}};
-		\draw (n10.north east) node [above right, fill=white, fill opacity=.7, text opacity=1]{\textcolor{MatlabBlue}{\textbf{Froid}}};		
+		\draw (n30.north west) node [above right, fill=white, fill opacity=0, text opacity=1]{\textcolor{MatlabOrange}{\textbf{Ambiant}}};
+		\draw (n10.north east) node [above right, fill=white, fill opacity=0, text opacity=1]{\textcolor{MatlabBlue}{\textbf{Froid}}};		
 	\end{scope}
 	\begin{pgfonlayer}{background}
 		\draw[->, very thick] (NewO.center) -- ++(22.5:1.2*\R);
